--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test:mocha": "mocha test/**/*.test.js"
+    "test:mocha": "mocha test/**/*.test.js --exit"
   },
   "dependencies": {
+    "chai": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mocha": "^11.7.5",
     "mysql2": "^3.15.3",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "sinon": "^21.0.0",
+    "sinon-chai": "^4.0.1",
+    "supertest": "^7.1.4"
   }
 }
