--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test:mocha": "mocha test/**/*.test.js --exit"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "chai": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.5",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
